// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumbs > renders aria-current as location for last item without href 1`] = `
<a
  href="#"
>
  <!--F#7[0]-->
  Item Text 0
  <!--F/-->
</a>
`;

exports[`breadcrumbs > renders aria-current as location for last item without href 2`] = `
<a
  href="#"
>
  <!--F#7[0]-->
  Item Text 0
  <!--F/-->
</a>
`;

exports[`breadcrumbs > renders aria-current as location for last item without href 3`] = `
<a
  href="#"
>
  <!--F#7[1]-->
  Item Text 1
  <!--F/-->
</a>
`;

exports[`breadcrumbs > renders aria-current as location for last item without href 4`] = `
<a
  href="#"
>
  <!--F#7[1]-->
  Item Text 1
  <!--F/-->
</a>
`;

exports[`breadcrumbs > renders aria-current as location for last item without href 5`] = `
<a
  aria-current="location"
>
  <!--F#7[2]-->
  Item Text 2
  <!--F/-->
</a>
`;

exports[`breadcrumbs > renders aria-current as location for last item without href 6`] = `
<a
  aria-current="location"
>
  <!--F#7[2]-->
  Item Text 2
  <!--F/-->
</a>
`;

exports[`breadcrumbs > renders basic structure 1`] = `
<nav
  aria-labelledby="s0-breadcrumbs-heading"
  class="breadcrumbs breadcrumb--overflow"
  items="[{"href":"#"},{"href":"#"},{}]"
  role="navigation"
>
  <h2
    class="clipped"
    id="s0-breadcrumbs-heading"
  >
    Page navigation
  </h2>
  <ul />
</nav>
`;

exports[`breadcrumbs > renders buttons when hrefs are missing 1`] = `
<button>
  <!--F#7[0]-->
  Item Text 0
  <!--F/-->
</button>
`;

exports[`breadcrumbs > renders buttons when hrefs are missing 2`] = `
<button>
  <!--F#7[1]-->
  Item Text 1
  <!--F/-->
</button>
`;

exports[`breadcrumbs > renders buttons when hrefs are missing 3`] = `
<button
  aria-current="location"
>
  <!--F#7[2]-->
  Item Text 2
  <!--F/-->
</button>
`;

exports[`breadcrumbs > renders different heading tag when specified 1`] = `
<h3
  class="clipped"
  id="s0-breadcrumbs-heading"
>
  Page navigation
</h3>
`;

exports[`passes through additional html attributes 1`] = `
<nav
  aria-labelledby="s0-breadcrumbs-heading"
  class="breadcrumbs breadcrumb--overflow class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="navigation"
  style="color:red"
  type="number"
>
  <h2
    class="clipped"
    id="s0-breadcrumbs-heading"
  />
  <ul />
</nav>
`;

exports[`passes through additional html attributes 2`] = `
<nav
  aria-labelledby="s0-breadcrumbs-heading"
  class="breadcrumbs breadcrumb--overflow class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="navigation"
  style="color:red"
  type="number"
>
  <h2
    class="clipped"
    id="s0-breadcrumbs-heading"
  />
  <ul />
</nav>
`;

exports[`passes through additional html attributes from child item 1`] = `
<button
  aria-current="location"
  class="class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
/>
`;

exports[`passes through additional html attributes from child item 2`] = `
<button
  aria-current="location"
  class="class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
/>
`;
